--- a/test.html
+++ b/test.html
@@ -57,7 +57,7 @@
       }
     }
     button {
-      display:block;
+      
       margin:20px auto;
       background:#4a90e2;
       color:#fff;
@@ -107,10 +107,11 @@
       <div id="progress-bar"></div>
     </div>
     <div id="progress-text">0% completed</div>
-  </div>
+  </div><center>
   <form id="test-form" style="margin-top:60px;">
     <button type="submit">Submit Test</button>
-  </form>
+    <button type="button" onclick="window.location.href='/logout'">Logout</button>
+  </form></center>
   <div id="result" style="display:none;">
     <h2>Evaluation</h2>
     <p id="evalText"></p>
